Fix spacing under nav in recipe list

--- a/src/scss/_recipe-list.scss
+++ b/src/scss/_recipe-list.scss
@@ -31,7 +31,7 @@
   .clicker-button {
     clear: both;
     display: block;
-    margin: 1rem 0 2rem;
+    margin: 1rem 0 0;
   }
 }
 
